mlog_parse_index(): Remove an off-by-one error in the bounds check that would cause the crash recovery of MLOG_COMP_PAGE_REORGANIZE to fail. (Bug #20855)